# android-pure-native-app

./: build.gradle  settings.gradle
example/: CMakeLists.txt  build.gradle
example/src/main/: AndroidManifest.xml
example/src/main/cpp/: main.c
nativedemo/: build.gradle
nativedemo/src/main/: AndroidManifest.xml
